# app-template

backend/: Cargo.toml  build.rs
backend/src/: lib.rs
backend/src/route/: mod.rs  sample.rs  sample2.rs
proto/: sample.proto  sample2.proto
