[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
runtime = "0.0.0"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.8.3"
tonic-build = "0.8.4"

[build-dependencies]
tonic-build = "0.8.4"


[profile.dev]
opt-level = 3
overflow-checks = false
debug = false
debug-assertions = false
lto = false
incremental = false
codegen-units = 16
rpath = false
